publish: Fix small typos
generated from commit cb8b12e526a3a4da41b0bf3effd7e53c9df76d4e

--- a/gandalf.html
+++ b/gandalf.html
@@ -156,6 +156,10 @@
 
 <p>In a result you will get a total of all scores and you can make further decision based on this value.</p>
 
+<h2 id="state-transition-rules-for-bpm">State Transition Rules for BPM</h2>
+
+<p>Sometimes you need to have very complex rules in your BPM-engine, that should tell you to which branch your task should be moved. In this case you can call Gandalf and configure all this in it.</p>
+
 <h1 id="support">Support</h1>
 
 <p>This project is continuously supported on behalf of our customers and as part of our own <a href="https://gandalf.nebo15.com/">SASS-service</a>. We recommend to use it, but feel free to create your own installation of Gandalf.</p>
@@ -314,7 +318,7 @@ sudo /bin/bash puppet/initial/init.sh -u "www-data"
 
 <p>Also we believe that vendor-lock is a bad thing, so we published all source code on a MIT license, so you are free to change it as you wish.</p>
 
-<p>Done by <a href="https://github.com/Nebo15">Nebo #15</a>.</p>
+<p>Done by <a href="http://nebo15.com/">Nebo #15</a>.</p>
 
       </div>
       <div class="dark-box">
