--- a/gandalf.html
+++ b/gandalf.html
@@ -228,6 +228,10 @@ All request parameters are required!
 
 <blockquote>
 <pre class="highlight plaintext"><code>IF rule1 then return rule1.decision
+ELSEIF rule2 then return rule2.decision
+ELSEIF rule3 then return rule3.decision
+ELSEIF ruleN then return ruleN.decision
+ELSE default return default.decision
 </code></pre>
 </blockquote>
 
